--- a/views/list.jade
+++ b/views/list.jade
@@ -6,16 +6,20 @@ h1 All Rates
     li
       p.title
         a(href='/getrate/' + item.id)=item.title
+
       p.name
-        span=item.name
-      div.rate
-        - item.rates.forEach(function(r){
-          span.item=r
-        - })
-        span=item.value
-      p.id _id : 
+        span=item.author
+      p.other
+        span=item.other
+      - if (item.rates)
+        div.rate
+          - item.rates.forEach(function(r){
+            span.item=r
+          - })
+          span=item.value
+      p.id _id :
         span=item._id
-      p.id id : 
+      p.id id :
         span=item.id
       p.score=item.score
     - })
