--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,4 +3,12 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body!= body
+  body
+  header
+    nav
+      ul
+        li
+          a(href="/create") create
+        li
+          a(href="/list") list
+  != body
